[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/PlayerAnim.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Overlaps/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Music and Sounds/Swipe.wav" type="AudioStream" id=4]
[ext_resource path="res://Overlaps/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Music and Sounds/Evade.wav" type="AudioStream" id=6]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=7]
[ext_resource path="res://Effects/WhiteColorShader.tres" type="Material" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=38]
height = 12.0

[sub_resource type="CircleShape2D" id=43]
radius = 66.0303

[sub_resource type="CapsuleShape2D" id=39]
radius = 6.0
height = 10.0

[sub_resource type="Animation" id=42]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=40]
resource_name = "start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=41]
resource_name = "stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
script = ExtResource( 1 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 2 )
texture = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 8 )
position = Vector2( 1, -8 )
frames = ExtResource( 2 )
animation = "IdleDown"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = -1.5708
shape = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
rotation = 1.5708
collision_mask = 8
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" parent="Hitbox" index="0"]
visible = false
shape = SubResource( 38 )
disabled = true

[node name="CollisionShapeShockwave" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( -6, 0 )
rotation = -1.5708
shape = SubResource( 43 )
disabled = true

[node name="ShockwaveTimer" type="Timer" parent="Hitbox"]

[node name="ShockwaveTimeOut" type="Timer" parent="Hitbox"]

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2( -1, -8 )
shape = SubResource( 39 )

[node name="SwordSwipeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="RollEvadeSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 42 )
anims/start = SubResource( 40 )
anims/stop = SubResource( 41 )

[node name="AttackDone" type="Timer" parent="."]

[connection signal="attack" from="." to="Hitbox" method="_on_Player_attack"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Hitbox/ShockwaveTimer" to="." method="_on_ShockwaveTimer_timeout"]
[connection signal="timeout" from="Hitbox/ShockwaveTimeOut" to="." method="_on_ShockwaveTimeOut_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_stated" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_stated"]
[connection signal="timeout" from="AttackDone" to="." method="_on_AttackDone_timeout"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
